Improve CSS for marking todos as done/undone
- Use fontawesome
- Add margin around checkboxes
- change cursor to pointer over checkboxes
- Strikethrough done items
- Grey out done items

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -24,3 +24,13 @@ hr {
     padding: 5px 10px;
     margin-right: 5px;
 }
+
+.check-box {
+    margin: 5px;
+    cursor: pointer;
+}
+
+.completed-todos{
+    text-decoration: line-through;
+    color: #808080;
+}
