--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -41,6 +41,7 @@ hr {
 
 input.todo {
     border: 0px solid;
+    width: 95%;
     background-color: transparent;
     text-decoration: inherit;
 }
