--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -1,9 +1,39 @@
 
-/*----- common start -----*/
-.page {
+/*
+---------- ----- ----- ----- ----- ----- 
+common
+---------- ----- ----- ----- ----- ----- 
+*/
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Montserrat', Verdana, sans-serif;
+}
+
+body {
+    background: #f1f1f1;
+}
+
+a {
+    text-decoration: none;
+}
+
+input {
+    border: none;
+    outline: none;
+    box-shadow: none;
+}
+
+.main-container {
     height: 100%;
-    margin: 5em auto;
-    width: 800px;
+    width: 64%;
+    
+    margin: 3rem auto;
+
+    background: white;
+    border-radius: 0.5rem;
+    box-shadow: 0 4px 16px #d1d1de;
 }
 
 .lists-panel {
@@ -12,73 +42,247 @@
     justify-content: space-between;
 }
 
-h1 {
-    text-align: center;
-    color: #671b96;
+.add-object input {
+    flex: 4;
+    padding-left: 1rem;
+    border-top-left-radius: 0.5rem;
+    border-bottom-left-radius: 0.5rem;
+}
+
+.add-object button {
+    color: white;
+    
+    background: #4a39ac;
+    border-top-right-radius: 0.5rem;
+    border-bottom-right-radius: 0.5rem;
+} 
+
+.add-object button i.fas.fa-plus {
+    margin-right: 0.5rem;
 }
 
 hr {
-    color: #D3D3D3
+    border: none;
+    outline: none;
+    width: 100%;
+    height: 1px;
+    background-color: rgba(74,57,172, 0.40);
+    margin: 0.5rem 0;
 }
 
 .sign-out-panel {
     text-align: center;
 }
 
-/*----- common end -------*/
+/*
+---------- ----- ----- ----- ----- ----- 
+header
+---------- ----- ----- ----- ----- ----- 
+*/
+.header {
+    display: flex;
+    justify-content: space-between;
 
-/*----- todo-panel start -*/
-.list-box {
-    border: 1px solid #0f0f0f;
-    margin: 20px;
-    padding: 20px;
-    width: 300px;
-    border-radius: 3px;
-    background-color: #f1f3f4;
+    padding: 1rem;
+    
+    border-bottom: 1px solid #e1e1e1;
+    background: #00107c;
 }
 
-.todo-item {
-    color: #484848
+.header h1 {
+    flex: 1;
+    align-self: center;
+    
+    font-weight: 300;
+    color: white;
+    text-align: center;
 }
 
-
-
-.check-box {
-    margin: 5px;
-    cursor: pointer;
+.header a {
+    align-self: center;
+    
+    padding: 5px;
+    
+    color: #00107c;
+    text-decoration: none;
+    
+    background: #fafafa;
+    border: 1px solid #e1e1e1;
 }
 
-.completed-todos * {
+.header a:hover {
+    cursor: default;
+    background: #f1f1f1;
+}
+
+.sign-out-panel {
+    display: none; /*REMOVE SIGNOUT PANEL FROM CODE AND DELETE THIS CHUNK*/
+}
+
+/*
+---------- ----- ----- ----- ----- ----- 
+add todo list
+---------- ----- ----- ----- ----- ----- 
+*/
+.add-todo-list {
+    display: flex;
+
+    padding: 2rem;
+
+    border-top-left-radius: 0.5rem;
+    border-top-right-radius: 0.5rem;
+    background: rgba(0,16,124, 0.1);
+}
+
+.add-todo-list > * {
+    flex: 1;
+    height: 40px;
+} 
+
+/*
+---------- ----- ----- ----- ----- ----- 
+todo panel start
+---------- ----- ----- ----- ----- ----- 
+*/
+
+.lists-panel {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 90%;
+    margin: 3rem auto;
+}
+
+/*
+---------------------------------------------------------------
+---------------------------------------------------------------
+---------------------------------------------------------------
+---------------------------------------------------------------
+*/
+
+.list-container {
+    display: flex;
+    flex-direction: column;
+    flex: 0 0 22rem;
+    align-items: stretch;
+    
+    margin: 2rem;
+
+    border-radius: 0.25rem;
+    border: 1px solid rgba(0,16,124, 0.1);
+    background: rgba(0,16,124, 0.04);
+}
+
+.list-container > *{
+    padding: 1rem;
+}
+
+.list-title {
+    flex: 0;
+
+    font-size: 0.75rem;
+    font-weight: bold;
+    color: rgba(0,16,124, 0.56);
+    text-transform: uppercase;
+
+    border-bottom: 1px solid rgba(74,57,172, 0.15);;
+}
+
+.list-items {
+    flex: 1;
+    padding-top: 0.5rem;
+}
+
+.list-container .add-object {
+    display: flex;
+    flex: 0;
+    min-height: 56px;
+    
+    background: rgba(0,16,124, 0.1);
+}
+
+/*
+---------------------------------------------------------------
+---------------------------------------------------------------
+---------------------------------------------------------------
+---------------------------------------------------------------
+*/
+
+.list-container .add-object > *{
+    flex: 1;
+}
+
+.list-container .add-object input{
+    flex: 4;
+}
+
+.list-container .add-object button i.fas.fa-plus{
+    margin-right: 0;
+}
+
+/*
+---------------------------------------------------------------
+---------------------------------------------------------------
+---------------------------------------------------------------
+---------------------------------------------------------------
+*/
+
+.list-items .item {
+    display: flex;
+}
+
+.list-items .item > * {
+    flex: 1;
+}
+
+.list-items .item input {
+    flex: 16;
+    font-size: 1rem;
+
+    background: none;
+    margin-left: 0.25rem;
+}
+
+.list-items .item i {
+    align-self: center;
+    text-align: center; 
+}
+
+/*
+---------------------------------------------------------------
+---------------------------------------------------------------
+---------------------------------------------------------------
+---------------------------------------------------------------
+*/
+
+.items-completed .item > *{
+    opacity: 0.5;
+}
+
+.items-completed .item input{
     text-decoration: line-through;
-    color: #808080;
 }
 
-.todo-row * {
-    display: inline-block;
+.items-completed .item i:hover{
+    opacity: 1;
 }
 
-input.todo {
-    border: 0px solid;
-    width: 85%;
-    background-color: transparent;
-    text-decoration: inherit;
-}
+/*
+---------- ----- ----- ----- ----- ----- 
+media queries
+---------- ----- ----- ----- ----- ----- 
+*/
 
-input.todo:hover {
-    outline: none;
-    background-color: #e6e6e6;
-}
+@media only screen 
+  and (min-width: 320px) 
+  and (max-width: 768px) {
 
-input.todo:focus {
-    outline: none;
-    background-color: #d3d3d3;
-}
+    .main-container {
+        width: 95%;
+    }
 
-.delete-btn {
-    opacity: .3;
-    cursor: pointer;
-}
+    .list-container {
+        flex: 1 1 22rem;
+    }
 
-.delete-btn:hover {
-    opacity: .7;
 }
