--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -177,16 +177,35 @@ todo panel start
     padding: 1rem;
 }
 
-.list-title {
+.list-container-header {
     flex: 0;
+    border-bottom: 1px solid rgba(74,57,172, 0.15);
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+    padding-bottom: 2rem;
+
+}
+
+.list-title {
 
     font-size: 0.75rem;
     font-weight: bold;
     color: rgba(0,16,124, 0.56);
     text-transform: uppercase;
 
-    border-bottom: 1px solid rgba(74,57,172, 0.15);;
 }
+
+.list-container-header > i {
+    opacity:0.1;
+}
+
+.list-container-header > i:hover {
+    opacity:0.5;
+}
+
 
 .list-items {
     flex: 1;
