Add frontend functionality to archive a list

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -195,6 +195,7 @@ todo panel start
 }
 
 .list-title {
+    flex: 10;
     height: 1rem;
     font-size: 0.75rem;
     font-weight: bold;
@@ -209,6 +210,7 @@ todo panel start
 }
 
 .list-container-header > i {
+    flex: 1;
     opacity:0.1;
 }
 
