Add frontend functionality to invite a user

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -146,6 +146,26 @@ add todo list
 
 /*
 ---------- ----- ----- ----- ----- -----
+invite user
+---------- ----- ----- ----- ----- -----
+*/
+.invite-user {
+    display: flex;
+
+    padding: 2rem;
+
+    border-bottom-left-radius: 0.5rem;
+    border-bottom-right-radius: 0.5rem;
+    background: rgba(0,16,124, 0.1);
+}
+
+.invite-user > * {
+    flex: 1;
+    height: 40px;
+}
+
+/*
+---------- ----- ----- ----- ----- -----
 todo panel start
 ---------- ----- ----- ----- ----- -----
 */
